# tonalogy-api

./: .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
api/: main.py
api/endpoints/: analysis.py  visualizer.py
api/schemas/: analysis_schemas.py
api/services/: analysis_service.py  analysis_services.py  explanation_formatter.py  visualizer_service.py
core/config/: knowledge_base.py
core/config/data/: kripke_structure.json  tonalities.json
core/domain/: __init__.py  models.py
core/i18n/: __init__.py  locale_manager.py  middleware.py  translator.py
core/i18n/locales/: en.json  pt_br.json
core/logic/: candidate_processor.py  kripke_evaluator.py  progression_analyzer.py
docs/: i18n.md
scripts/: generate_tonal_data.py
tests/api/: test_flat_api_support.py
tests/api/endpoints/: test_analysis.py  test_visualizer.py
tests/api/services/: test_analysis_service.py  test_explanation_formatter.py  test_visualizer_service.py
tests/core/: test_core_integration.py
tests/core/config/: test_knowledge_base.py
tests/core/domain/: test_flat_support.py  test_models.py  test_unicode_symbols.py
tests/core/i18n/: __init__.py  test_i18n.py
tests/core/integration/: test_flat_integration.py
tests/core/logic/: test_kripke_evaluator.py  test_progression_analyzer.py
tests/core/scripts/: test_generate_tonal_data.py
tests/visualizer/: test_harmonic_graph.py  test_theming.py  test_unicode_symbols.py  test_visualizer_integration.py
visualizer/: harmonic_graph.py  styles.py  svg_factory.py  theming.py
visualizer/config/: tonality_colors.csv  tonality_colors_dark.csv
